# AI-LLM-Focus

./: .gitignore  main.py  pyproject.toml
LLAVA/: ollama_llava_mistral.py  streamlit_app.py
LLM Basics/: Ollama_test.py  OpenAI_test.ipynb  OpenAI_test.py  cosine_similarity.ipynb
LLM Bootcamp/Embeddings/: embedding.ipynb
LLM Bootcamp/Image to Text/: CLIP.ipynb
LLM Bootcamp/Image to Text/LLAVA/: LLAVA_basic.ipynb
LLM Bootcamp/LLAVA- Image to Text/: streamlit_app.py
LLM Bootcamp/chunking_strategy/: config.yaml  mkdocs.yml  pyproject.toml
LLM Bootcamp/chunking_strategy/docs/: index.md
LLM Bootcamp/chunking_strategy/docs/notebooks/: Week_1_summary.ipynb  sample_text.txt  text_chunking_strategy.ipynb
LLM Bootcamp/chunking_strategy/docs/project-guide/: project-guide.md
LLM Bootcamp/chunking_strategy/docs/project-guide/lab_notes/basic-setup/: 01. uv-setup.md  02. code-setup.md  03. docker-setup.md  05. nvidia-container-setup.md
RAG Basics/: rag_chat.py  streamlit_app.py
