[project]
name = "ai-llm-focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "chromadb>=1.0.15",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "fastmcp>=2.11.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-qdrant>=0.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pip>=25.1.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]
